--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+        --color-default: #000000;
+        --color-primary: #000000;
+        --color-error: #FF0000;
+        --color-success: #0000FF;
+        --color-on: #FF0000;
+        --color-yes: #0000FF;
+        --color-stream-on: #ff6467;
+        --color-stream-off: #505050;
+        --color-default-bg: #FFFFFF;
+        --color-selected-bg: #D0D0D0;
+        --color-default-border: #707070;
+        --color-stream-on-border: #aaaaff;
+        --color-stream-off-border: #505050;
+        --color-selected-border: #C4C4C4;
+    }
+
+    html[data-theme='chzzk'] {
+        --color-primary: #00FFA3;
+        --color-error: #FF005C;
+        --color-success: #3FFFE5;
+        --color-on: #FF005C;
+        --color-yes: #3FFFE5;
+        --color-stream-on-text: #ff6467;
+        --color-stream-off-text: #505050;
+        --color-default-bg: #000000;
+        --color-selected-bg: #2C2D2F;
+        --color-default-border: #707070;
+        --color-stream-on-border: #e0e0e0;
+        --color-stream-off-border: #c0c0c0;
+        --color-selected-border: #FFFFFF;
+    }
+}
