style - youtube란에 경고라는 의미의 노란색을 추가

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -8,12 +8,14 @@
         --color-primary: #000000;
         --color-error: #FF0000;
         --color-success: #0000FF;
+        --color-warning: #E29F47;
         --color-on: #FF0000;
         --color-yes: #0000FF;
         --color-stream-on: #ff6467;
         --color-stream-off: #505050;
         --color-default-bg: #FFFFFF;
         --color-selected-bg: #D0D0D0;
+        --color-warning-bg: #FFD177;
         --color-default-border: #707070;
         --color-stream-on-border: #aaaaff;
         --color-stream-off-border: #505050;
@@ -24,12 +26,14 @@
         --color-primary: #00FFA3;
         --color-error: #FF005C;
         --color-success: #3FFFE5;
+        --color-warning: #FFFF00;
         --color-on: #FF005C;
         --color-yes: #3FFFE5;
         --color-stream-on-text: #ff6467;
         --color-stream-off-text: #505050;
         --color-default-bg: #000000;
         --color-selected-bg: #2C2D2F;
+        --color-warning-bg: #FFFF88;
         --color-default-border: #707070;
         --color-stream-on-border: #e0e0e0;
         --color-stream-off-border: #c0c0c0;
